--- a/natto operation/natto operation.csproj
+++ b/natto operation/natto operation.csproj
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\NattoString.cs" />
-    <Compile Include="Assets\Script\StickyAndControll.cs" />
+    <Compile Include="Assets\Script\Sticky.cs" />
     <Compile Include="Assets\Script\addforce_CollidePoint.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
